welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:2: error: value ||! is not a member of Boolean
(!outsideMode && 1<=n && n<=10)||!(1<=n && n<=10)} 
                               ^